# EcoDrive-Simulator

./: .dockerignore  DEPLOYMENT.md  Dockerfile  FASTF1_INTEGRATION.md  HOSTING_SUMMARY.md  Procfile  QUICK_START_DEPLOYMENT.md  README.md  RENDER_BUILD_FIX.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_GUIDE.md  REQUIREMENTS_NOTES.md  SIMULATION_INTEGRATION.md  docker-compose.yml  package-lock.json  package.json  start.bat  vercel.json
backend/: 0.12.2  0.5.0  1.25.0  1.3.0  10.0.1  2.0.3  2.3.0  2.6.0  3.8.3  4.9.0.80  app.py  config.py  f1tenth_integration.py  fastf1_service.py  gunicorn_config.py  requirements-prod.txt  requirements.txt  web_simulation.py  wsgi.py
backend/maps/: map0_centerline.csv  map0_raceline.csv  map1_centerline.csv  map1_raceline.csv  map2_centerline.csv  (+1 more)
f1tenth_rl-main/: pyproject.toml  test_local_import.py
f1tenth_rl-main/f1tenth_gym/: __init__.py
f1tenth_rl-main/f1tenth_gym/envs/: action.py  f110_env.py  observation.py
f1tenth_rl-main/f1tenth_gym/envs/rendering/: rendering.yaml  rendering_pygame.py
f1tenth_rl-main/f1tenth_gym/envs/track/: track.py
f1tenth_rl-main/scripts/: resume_training.py  run.py  run_sac.py  test_ppo_silverstone.py  test_sac_monza.py  test_sac_silverstone.py  train.py  train_multi_track.py  train_multi_track_ppo.py  train_ppo.py  train_ppo_monza.py  train_ppo_silverstone.py  train_sac_monza.py  train_sac_silverstone.py  train_sac_spa.py  waypoint_follow.py
f1tenth_rl-main/src/f1tenth_wrapper/: env.py
f1tenth_rl-main/tests/: test_f1tenth_wrapper.py
public/: index.html
src/: App.css  App.js  config.js  index.css
(+29 files in other folders)
